# note-interpreter

./: .gitignore  README.md  demo_neuro_notes_length.py  location.py  main.py  neuro_notes_length.py  output.mid  pyproject.toml  reading.py  requirements.txt  test_interpreter.py  test_neuro_length.py
.github/workflows/: CI.yml
datasets/data_for_tests/000100619-1_1_1/: 000100619-1_1_1.mid
datasets/data_for_tests/000100643-1_1_1/: 000100643-1_1_1.mid
datasets/data_for_tests/000100644-1_1_1/: 000100644-1_1_1.mid
datasets/data_for_tests/000100649-1_1_1/: 000100649-1_1_1.mid
datasets/data_for_tests/000100653-1_1_1/: 000100653-1_1_1.mid
datasets/data_for_tests/000100654-1_1_1/: 000100654-1_1_1.mid
datasets/data_for_tests/000100667-1_1_1/: 000100667-1_1_1.mid
datasets/data_for_tests/000100668-1_1_1/: 000100668-1_1_1.mid
datasets/data_for_tests/000100669-1_1_1/: 000100669-1_1_1.mid
datasets/data_for_tests/000100670-1_1_1/: 000100670-1_1_1.mid
datasets/data_for_tests/000100671-1_1_1/: 000100671-1_1_1.mid
datasets/data_for_tests/000100674-1_1_1/: 000100674-1_1_1.mid
datasets/data_for_tests/000100680-1_1_1/: 000100680-1_1_1.mid
datasets/made_from_primus_dataset/test/000100602-1_1_1/: 000100602-1_1_1.mid
datasets/made_from_primus_dataset/test/000100602-1_2_1/: 000100602-1_2_1.mid
datasets/made_from_primus_dataset/test/000100602-1_2_2/: 000100602-1_2_2.mid
neuronet/: demo_neuro_notes_length.py  midi_parsing.py  neuro_notes_length.py  neuro_teaching.py  notes_length.h5  test_neuro_length.py
(+641 files in other folders)
